Se realizaron cambios en las fuentes

--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
 							<div class="col-3">
 								<input type="number" name="objetivo" class="form-control text-center" id="objetivo" value="80">
 							</div>
-						</div> 	
+						</div>
+
+						<div class="presentacion">
+							<p class="text-center mi-nombre">Desarrollado por Javier Lencina</p>
+						</div>
 					</div> <!-- FIN INGRESO DE DATOS -->
-					
 					<!-- BOTON -->
 					<div class="banner">
 						<div class="contenedor-banner">
@@ -76,6 +79,7 @@
 					</div>
 				</form>
 
+			
 				</div> <!-- FIN CARA FRONTAL -->
 
 				<!-- CARA TRASERA -->
@@ -96,6 +100,7 @@
 
 		</div>
 	</div>
+
 	</main>
 
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
