Cambios menores en la interfaz y la animacion de la tarjeta

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<!-- BOTON -->
 					<div class="banner">
 						<div class="contenedor-banner">
-							<button type="submit" class="boton-frontal texto-banner" id="boton-frontal"><ion-icon name="arrow-round-forward" class="icono-banner icono-alterno"></ion-icon></button>
+							<button type="submit" class="boton-frontal texto-banner" id="boton-frontal"><ion-icon name="return-right" class="icono-banner icono-alterno"></ion-icon></button>
 						</div>
 					</div>
 				</form>
@@ -91,7 +91,7 @@
 					<!-- BOTON -->
 					<div class="banner">
 						<div class="contenedor-banner">
-							<button type="button" class="boton-frontal texto-banner" id="boton-atras"><ion-icon name="arrow-round-forward" class="icono-banner icono-alterno"></ion-icon></button>
+							<button type="button" class="boton-frontal texto-banner" id="boton-atras"><ion-icon name="arrow-forward" class="icono-banner icono-alterno"></ion-icon></button>
 						</div>
 					</div>
 				</div> <!-- FIN CARA TRASERA -->
