se agrega efecto de sombra

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="contenido-tarjeta" id="contenido-tarjeta">
 
 				<!-- CARA FROTAL DE LA TARJETA -->
-				<div class="cara-frontal">
+				<div class="cara-frontal sombra" id="cara-frontal">
 					<div class="banner">
 						<div class="contenedor-banner">
 							<ion-icon name="calculator" class="icono-banner"></ion-icon>
@@ -83,7 +83,7 @@
 				</div> <!-- FIN CARA FRONTAL -->
 
 				<!-- CARA TRASERA -->
-				<div class="cara-trasera" id="cara-trasera">
+				<div class="cara-trasera sombra" id="cara-trasera">
 					<div id="cara-trasera-contenedor">
 						
 					</div>
